--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../sass/main.scss">
     <title>Library</title>
 
     <div class="movies"></div>
@@ -13,24 +14,29 @@
     <header>
         <div class="container">
             <div class="nav-menu">
-                <a href="../images/logo.png" class="icon-logo"></a>
-                <h1 class="site-title">Filmoteka</h1>
+                <div class="logo">
+                    <img src="../images/logo.png" alt="logo" class="logo__img">
+                    <a href="#" class="logo__link">
+                        <h1 class="logo__site-title">Filmoteka</h1>
+                    </a>
+                </div>
 
                 <ul class="site-pages">
-                    <li class="site-pages__item"><a href="../home.html" class="site-pages__link">Home</a></li>
-                    <li class="site-pages__item"><a href="#" class="site-pages__link current-page"
-                            style="text-decoration:underline">Library</a></li>
+                    <li class="site-pages__item"><a href="../index.html" class="site-pages__home-link">Home</a></li>
+                    <li class="site-pages__item"><a href="#" class="site-pages__library-link current-page">Library</a></li>
                 </ul>
             </div>
-
-            
-                <button type="submit" >watched</button>
-                <button type="submit" >queue</button>
+            <div class="library-buttons">
+                <button type="submit" class="js-watched-btn">watched</button>
+                <button type="submit" class="js-queue-btn">queue</button>
+            </div>
+                
 
         </div>
     </header>
 
     <ul class="gallery"> </ul>
-    <script type="module" src="../index.js"></script>
+    <!-- <script type="module" src="../scripts/fetch-movies.js"></script> -->
+
 </body>
 </html>
