add styles for gallery

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -86,15 +86,15 @@ input.js-movie-search {
 
 ////////////////////////
 
-.library-buttons {
-    margin-top: 40px;
-    padding-bottom: 80px;
-}
+// .library-buttons {
+//     margin-top: 40px;
+//     padding-bottom: 80px;
+// }
 
-.library-buttons button {
-    width: 148px;
-    background-color: transparent;
-    border: 1px solid var(--white-color);
-    height: 42px;
+// .library-buttons button {
+//     width: 148px;
+//     background-color: transparent;
+//     border: 1px solid var(--white-color);
+//     height: 42px;
     
-}
+// }
