--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,1 +1,448 @@
-/*# sourceMappingURL=main.css.map */
+header {
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-home-desktop.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+header .container {
+  text-align: center;
+}
+
+.nav-menu {
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo__img {
+  width: 24px;
+  height: 24px;
+}
+
+.logo__site-title {
+  margin-left: 12px;
+  font-size: 30px;
+  line-height: 35px;
+}
+
+.site-pages {
+  display: flex;
+}
+
+.site-pages__item {
+  font-size: 12px;
+  line-height: 14px;
+  text-transform: uppercase;
+}
+
+.site-pages__home-link {
+  margin-right: 40px;
+}
+
+.current-page {
+  border-bottom: 1px solid var(--red-content-color);
+}
+
+.search-container {
+  padding: 0;
+  margin-top: 40px;
+  padding-bottom: 80px;
+}
+
+input.js-movie-search {
+  width: 395px;
+  border: none;
+  background-color: transparent;
+  color: var(--white-color);
+  border-bottom: 1px solid var(--white-color);
+}
+input.js-movie-search::-moz-placeholder {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 16px;
+}
+input.js-movie-search:-ms-input-placeholder {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 16px;
+}
+input.js-movie-search::placeholder {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.js-search-btn {
+  border: none;
+  background-color: transparent;
+  width: 25px;
+  height: 25px;
+  padding: 0;
+}
+
+.js-search-btn img {
+  width: inherit;
+}
+
+.modal-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border: 1px solid var(--black-color);
+  transform: translate(-50%, -50%);
+  background-color: var(--white-color);
+}
+
+.modal-window__button {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--white-color);
+}
+
+.modal-window__icon {
+  height: 100%;
+  transition: fill 250ms var(--timing-function);
+}
+.modal-window__icon:hover, .modal-window__icon:focus {
+  fill: var(--orange-content-color);
+}
+
+@media screen and (min-width: 320px) {
+  .modal-window {
+    width: calc(100% - 80px);
+    padding: 48px 20px 40px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .modal-window {
+    width: 380px;
+    padding: 48px 30px 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-window {
+    width: 596px;
+    padding: 40px 72px 40px 36px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    width: 782px;
+    padding: 40px 12px;
+  }
+}
+.modal-card {
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--black-color);
+}
+
+.modal-card__img {
+  border-radius: 5px;
+}
+
+.modal-card__title {
+  text-transform: uppercase;
+}
+
+.description-fields {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.parameter__item {
+  margin-right: 83px;
+  color: var(--gray-modal-text-color);
+}
+.parameter__item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.value__item {
+  line-height: 14px;
+}
+.value__item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.value__vote {
+  background-color: var(--orange-content-color);
+  padding: 1px 9px;
+  border-radius: 5px;
+}
+
+.value__votes {
+  background-color: var(--light-gray-modal-bg-color);
+  padding: 1px 4px;
+  border-radius: 5px;
+}
+
+.value__original-title {
+  text-transform: uppercase;
+}
+
+.modal-card__about {
+  font-weight: 500;
+  font-size: 12px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+
+.modal-card__about-overview {
+  font-size: 12px;
+  line-height: 20px;
+}
+
+.modal-card__buttons {
+  margin-top: 20px;
+  display: flex;
+}
+
+.modal-card__buttons button {
+  text-transform: uppercase;
+  border-radius: 5px;
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--black-color);
+  border: 1px solid var(--black-color);
+  background-color: var(--white-color);
+  transition: color 250ms var(--timing-function), border 250ms var(--timing-function), background-color 250ms var(--timing-function);
+}
+.modal-card__buttons button:hover, .modal-card__buttons button:focus {
+  color: var(--white-color);
+  border: 1px solid var(--orange-content-color);
+  background-color: var(--orange-content-color);
+}
+
+@media screen and (min-width: 320px) {
+  .modal-card__img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  .modal-card__description {
+    width: 100%;
+  }
+  .modal-card__title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .parameter__item {
+    margin-right: 40px;
+  }
+  .modal-card__buttons button {
+    width: 110px;
+    height: 44px;
+  }
+  .add-to-watched-btn {
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .modal-card__img,
+.modal-card__description {
+    width: 380px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-card {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0;
+  }
+  .modal-card__img {
+    width: 264px;
+    margin-bottom: 0px;
+  }
+  .modal-card__description {
+    width: 264px;
+  }
+  .modal-card__buttons button {
+    width: 125px;
+  }
+  .add-to-watched-btn {
+    margin-right: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal-card__img {
+    width: 375px;
+  }
+  .modal-card__description {
+    width: 390px;
+  }
+  .modal-card__title {
+    font-size: 30px;
+    line-height: 35px;
+  }
+  .parameter__item {
+    margin-right: 85px;
+  }
+  .modal-card__buttons {
+    margin-left: 8px;
+  }
+}
+body {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+}
+
+img {
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+button {
+  cursor: pointer;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  padding: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    width: calc(100% - 40px);
+  }
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 440px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 704px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+li.card {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card__movie-img {
+  border-radius: 5px;
+}
+
+.card__movie-title {
+  text-transform: uppercase;
+}
+
+.card__add-info {
+  color: var(--orange-content-color);
+}
+
+@media screen and (min-width: 320px) {
+  .gallery {
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+  li.card {
+    width: 280px;
+  }
+  li.card:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .card__movie-img {
+    width: 280px;
+    height: 398px;
+  }
+  .card__movie-title,
+.card__add-info {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  li.card {
+    width: 336px;
+    margin-bottom: 32px;
+  }
+  li.card:nth-last-child(1), li.card:nth-last-child(2) {
+    margin-bottom: 0;
+  }
+  .card__movie-img {
+    width: 336px;
+    height: 455px;
+    margin-bottom: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__movie-title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+:root {
+  --white-color: #fff;
+  --black-color: #000;
+  --gray-modal-text-color: #8C8C8C;
+  --light-gray-modal-bg-color: #F7F7F7;
+  --orange-content-color: #FF6B01;
+  --red-content-color: rgba(255, 0, 27, 1);
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}/*# sourceMappingURL=main.css.map */
