--- a/src/sass/layout/_modal-card.scss
+++ b/src/sass/layout/_modal-card.scss
@@ -37,6 +37,7 @@
 
 .value__vote {
     background-color: var(--orange-content-color);
+    color: var(--white-color);
     padding: 1px 9px;
     border-radius: 5px;
 }
