--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -6,7 +6,27 @@
     transform: translate(-50%, -50%);
     border: 1px solid var(--black-color);
     background-color: var(--white-color);
+    overflow-y: auto;
+    scrollbar-color: var(--orange-content-color);
+
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        background-color: var(--white-color);
+    }
+
+    &::-webkit-scrollbar {
+        width: 6px;
+        background-color: var(--white-color);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+        background-color: #c1c3c7;
+    }
 }
+
 .modal-window__button {
     position: absolute;
     right: 8px;
@@ -42,6 +62,7 @@
     .modal-window {
         width: calc(100% - 80px);
         padding: 48px 20px 40px;
+        height: 70vh;
     }
 }
 
@@ -50,6 +71,7 @@
     .modal-window {
         width: 380px;
         padding: 48px 30px 40px;
+        height: 60vh;
     }
 }
 
@@ -58,13 +80,15 @@
     .modal-window {
         width: 596px;
         padding: 40px 72px 40px 36px;
+        height: auto;
+        max-height: 80vh;
     }
 }
 
 @media screen and (min-width: 1200px) {
 
     .modal-window {
-        width: 782px;
+        width: 797px;
         padding: 40px 12px;
     }
 }
