--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../sass/main.scss">
+    <link rel="icon" href="../images/favicon.png">
     <title>Library</title>
 
     <div class="movies"></div>
