--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,6 +6,14 @@ body {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
+    background-color: #f7f1f1;
+    margin: 0;
+    padding: 0;
+    user-select: none;
+
+    &.modal-open {
+        overflow: hidden;
+    }
 }
 
 img {
