--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -5,25 +5,30 @@
 }
 
 @media screen and (min-width: 320px) {
+
     .container {
         width: calc(100% - 40px);
     }
 }
 
 @media screen and (min-width: 480px) {
+
     .container {
         width: 440px;
     }
 }
 
 @media screen and (min-width: 768px) {
+
     .container {
         width: 704px;
     }
 }
 
 @media screen and (min-width: 1200px) {
+    
     .container {
-        width: 1136px;
+        width: calc(100% - 64px);
+        max-width: 1650px;
     }
 }
