--- a/src/sass/components/_gallery-card.scss
+++ b/src/sass/components/_gallery-card.scss
@@ -1,8 +1,16 @@
 
 li.card {
-    margin-left: auto;
-    margin-right: auto;
-    
+    position: relative;
+    margin: 0;
+    padding-bottom: 20px;
+    transition: transform 250ms var(--timing-function);
+    letter-spacing: 0.03em;
+
+    &:hover,
+    &:focus {
+        transform: scale(1.02);
+        cursor: pointer;
+    }
 }
 
 .card__movie-img {
@@ -14,6 +22,8 @@ li.card {
 }
 
 .card__add-info {
+    position: absolute;
+    bottom: 0;
     color: var(--orange-content-color);
 }
 
@@ -24,17 +34,16 @@ span.value__vote {
 @media screen and (min-width: 320px) {
 
     .gallery {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
         margin-top: 20px;
         margin-bottom: 40px;
     }
 
     li.card {
         width: 280px;
-        // height: 438px;
-
-        &:not(:last-child) {
-            margin-bottom: 32px;
-        }
     }
 
     .card__movie-img {
@@ -55,20 +64,14 @@ span.value__vote {
     .gallery {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
         margin-top: 20px;
+        margin-left: auto;margin-right: auto;
+        gap: 32px;
     }
 
     li.card {
         width: 336px;
-        // height: 495px;
-        margin-bottom: 32px;
-
-        &:nth-last-child(1),
-        &:nth-last-child(2) {
-            margin-bottom: 0;
-        }
-            
     }
 
     .card__movie-img {
@@ -78,23 +81,23 @@ span.value__vote {
     }
 }
 
+
 @media screen and (min-width: 1200px) {
 
-    // .li.card {
-    //     width: 395px;
-    //     height: 634px;
-    //     margin-bottom: 32px;
+    .gallery {
+        column-gap: 16px;
+        row-gap: 32px;
+        max-width: 1600px;
+    }
 
-    //     &:nth-last-child(1),
-    //     &:nth-last-child(2) {
-    //         margin-bottom: 0;
-    //     }
-    // }
+    .card__movie-title {
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
 
-    // .card__movie-img {
-    //     width: 395px;
-    //     height: 574px;
-    // }
+
+@media screen and (min-width: 1920px) {
 
     .card__movie-title {
         font-size: 20px;
