--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -47,12 +47,13 @@
 }
 
 .modal-window__icon {
-    height: 100%;
-    transition: fill 250ms var(--timing-function);
+    width: 22px;
+    height: 22px;
+    transition: transform 250ms var(--timing-function);
 
     &:hover,
     &:focus {
-        fill: var(--orange-content-color);
+        transform: scale(1.02);
     }
 }
 
@@ -89,6 +90,7 @@
 
     .modal-window {
         width: 797px;
-        padding: 40px 12px;
+        // padding: 40px 12px;
+        padding: 45px 17px;
     }
 }
