--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,5 +7,6 @@
 @import './components/container';
 @import './components/backdrop';
 @import './components/gallery-card';
+@import './components/placeholder';
 
 @import './utils/variables';
