--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../sass/main.css">
     <link rel="icon" href="../images/favicon.png">
-    <title>Library</title>
+    <title>Filmoteka library</title>
 
     <div class="movies"></div>
 </head>
@@ -36,13 +36,13 @@
         </div>
     </header>
 
-    <ul class="gallery"> </ul>
+    <ul class="gallery"></ul>
 
     <div data-modal class="backdrop is-hidden">
         <div class="modal-window">
     
             <button class="modal-window__button" type="button" data-modal-close>
-                <svg class="modal-window__icon" width="18" height="18">
+                <svg class="modal-window__icon" >
                     <use href="../images/symbol-defs.svg#icon-close"></use>
                 </svg>
             </button>
