--- a/src/sass/layout/_modal-window.scss
+++ b/src/sass/layout/_modal-window.scss
@@ -80,9 +80,14 @@
 
     .modal-window {
         width: 596px;
-        padding: 40px 72px 40px 36px;
+        padding: 50px 35px 35px;
         height: auto;
         max-height: 80vh;
+    }
+
+    .modal-window__button {
+        right: 12px;
+        top: 12px;
     }
 }
 
@@ -90,7 +95,10 @@
 
     .modal-window {
         width: 797px;
-        // padding: 40px 12px;
-        padding: 45px 17px;
+        padding-top: 55px;
+    }
+
+    h3.modal-card__about {
+        font-size: 16px;
     }
 }
